[tool.poetry]
name = "trusted-firmware-a"
version = "2.8.0"
description = "Trusted Firmware-A (TF-A) Python dependencies."
authors = ["Arm Ltd."]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "8.1.3"
requests = "2.26.0"

[tool.poetry.group.dev.dependencies]
anytree = "2.8.0"
prettytable = "3.5.0"
pyelftools = "0.29"

[tool.poetry.group.doc.dependencies]
sphinx = "4.2.0"
myst-parser = "^0.18.1"
sphinxcontrib-plantuml = "^0.24.1"
sphinx-rtd-theme = "1.0.0"

