#
# Copyright (c) 2021, Arm Limited. All rights reserved.
#
# SPDX-License-Identifier: BSD-3-Clause
#

add_subdirectory("arm" EXCLUDE_FROM_ALL)
add_subdirectory("console" EXCLUDE_FROM_ALL)
add_subdirectory("cfi" EXCLUDE_FROM_ALL)
add_subdirectory("delay_timer" EXCLUDE_FROM_ALL)
add_subdirectory("io" EXCLUDE_FROM_ALL)
