#
# Copyright (c) 2021, Arm Limited. All rights reserved.
#
# SPDX-License-Identifier: BSD-3-Clause
#

add_subdirectory("cci" EXCLUDE_FROM_ALL)
add_subdirectory("ccn" EXCLUDE_FROM_ALL)
add_subdirectory("gic" EXCLUDE_FROM_ALL)
add_subdirectory("pl011" EXCLUDE_FROM_ALL)
add_subdirectory("smmu" EXCLUDE_FROM_ALL)
add_subdirectory("sp805" EXCLUDE_FROM_ALL)
add_subdirectory("tzc" EXCLUDE_FROM_ALL)
